# Vanguard

./: .gitignore  LICENSE.txt  Makefile  README.md  README.rst  SECURITY.md  assistant.py  docker-compose.yml  go.mod  go.sum  setup.cfg  setup.py  sloth.go  techstack.md  techstack.yml  tox.ini
.github/workflows/: api.yml  release.yml  release_package.yml
cmd/: root.go  server.go
core/controller/: context.go
core/migration/: schema.go
core/module/: database.go
core/service/: file_system_test.go
core/types/: dsn.go
deployment/ubuntu/: install.sh
llm/: utils.go
llm/llama.cpp/ggml/: requirements.txt
src/pyvanguard/core/: __init__.py  assistant.py  mind.py
src/pyvanguard/module/: __init__.py  jira.py
src/vanguard/: __init__.py  cli.py
src/vanguard/command/: __init__.py  alert.py  assistant.py  config.py  load.py  query.py
src/vanguard/core/: __init__.py  assistant.py  brain.py  mind.py
src/vanguard/exception/: __init__.py
src/vanguard/module/: __init__.py  database.py  file_system.py  logger.py  openai.py  pagerduty.py  qdrant.py  util.py
tests/module/: __init__.py  test_logger.py
