[metadata]
name = vanguard
description = Oncall AI Assistant.
author = Ahmed
author_email = hello@example.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/Author/Vanguard/
project_urls =
    Documentation = https://github.com/Author/Vanguard/
    Source = https://github.com/Author/Vanguard/
    Changelog = https://github.com/Author/Vanguard/blob/main/CHANGELOG.rst
    Tracker = https://github.com/Author/Vanguard/issues
    Download = https://pypi.org/project/Vanguard/#files

platforms = any

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    click<=8.1.8
    rich<=13.9.4
    importlib-metadata<=8.6.1; python_version<"3.8"

[options.packages.find]
where = src
exclude =
    tests
    cache

testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    vanguard = vanguard.cli:main

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs

[pyscaffold]
version = 4.1.1
package = vanguard
